--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <!-- tailwindcss -->
-    <link rel="stylesheet" href="../src/output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body class="font-bv relative text-[#111729] pb-10">
     <div class="relative z-10">
