--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
           </div>
           <div class="">
             <label>Message</label><br />
-            <textarea
-              name="message"
-              id="message"
-              class="resize-none h-[200px]"
-            ></textarea>
+            <textarea name="message" id="message" class="resize-none h-[200px]">
+50-100 employees</textarea
+            >
           </div>
           <button
             type="submit"
