--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./svg/contact-form-icon.svg" alt="icons" />
       </nav>
       <div class="my-[2rem] w-full">
-        <div class="w-[650px] m-auto text-center px-10">
+        <div class="w-[650px] m-auto text-center max-[1024px]:px-10">
           <h1
             class="text-[4rem] text-white font-semibold leading-[4.75rem] max-[1024px]:text-[3.2rem]"
           >
